--- a/Exercise/index.html
+++ b/Exercise/index.html
@@ -1,24 +1,51 @@
 <!DOCTYPE html>
 <html lang="zh-Hant-TW">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>產業新尖兵 練習題</title>
+    <title>Lab 練習</title>
+    
 </head>
+
 <body>
-    <body>
-        <h1>產業新尖兵練習</h1>
-        <table border="0" width="1000">
-        <tr>
-        <th>Exercise</th>
-        <th>描述</th>
-        <th>超連結</th>
-        </tr>
-        <tr>
-            <th>Exercise</th>
-            <th>描述</th>
-            <th>超連結</th>
-            </tr>
+    <header>
+        <h1>產業新尖兵 Lab 練習</h1>
+    </header>
+    <main>
+        <table>
+            <thead>
+                <tr>
+                    <th>Lab</th>
+                    <th>描述</th>
+                    <th>超連結</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Lab 01 - 課表</td>
+                    <td></td>
+                    <td><a href="./Exercise_01/">Exercise_01</a></td>
+                </tr>
+                <tr>
+                    <td>Lab 02 - 美化課表</td>
+                    <td></td>
+                    <td><a href="./Exercise_02/">Exercise_02</a></td>
+                </tr>
+                <tr>
+                    <td>Lab 03 - 彙整 Lab</td>
+                    <td></td>
+                    <td><a href="./Exercise_03/">Exercise_03</a></td>
+                </tr>
+                <tr>
+                    <td>Lab 04 - 選擇器</td>
+                    <td></td>
+                    <td><a href="./Exercise_04/">Exercise_04</a></td>
+                </tr>
+            </tbody>
+        </table>
+    </main>
+    <footer>
+    </footer>
 </body>
+
 </html>
