修改Exercise首頁內容

--- a/Exercise/index.html
+++ b/Exercise/index.html
@@ -9,43 +9,41 @@
 
 <body>
     <header>
-        <h1>產業新尖兵 Lab 練習</h1>
+        <h1>產業新尖兵 Exercise 練習</h1>
     </header>
     <main>
         <table>
             <thead>
                 <tr>
-                    <th>Lab</th>
+                    <th>Exercise</th>
                     <th>描述</th>
                     <th>超連結</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td>Lab 01 - 課表</td>
+                    <td>Exercise_01 </td>
                     <td></td>
-                    <td><a href="./Exercise_01/">Exercise_01</a></td>
+                    <td><a href="./Exercise_01/index.html">Exercise_01</a></td>
                 </tr>
                 <tr>
-                    <td>Lab 02 - 美化課表</td>
+                    <td>Exercise_02</td>
                     <td></td>
-                    <td><a href="./Exercise_02/">Exercise_02</a></td>
+                    <td><a href="./Exercise_02/index.html">Exercise_02</a></td>
                 </tr>
                 <tr>
-                    <td>Lab 03 - 彙整 Lab</td>
+                    <td>Exercise_03</td>
                     <td></td>
-                    <td><a href="./Exercise_03/">Exercise_03</a></td>
+                    <td><a href="./Exercise_03/index.html">Exercise_03</a></td>
                 </tr>
                 <tr>
-                    <td>Lab 04 - 選擇器</td>
+                    <td>Exercise_04 </td>
                     <td></td>
-                    <td><a href="./Exercise_04/">Exercise_04</a></td>
+                    <td><a href="./Exercise_04/index.html">Exercise_04</a></td>
                 </tr>
             </tbody>
         </table>
     </main>
-    <footer>
-    </footer>
 </body>
 
 </html>
