修改Lab首頁內容

--- a/lab/index.html
+++ b/lab/index.html
@@ -24,7 +24,17 @@
                 <tr>
                     <td>Lab 01 - 課表</td>
                     <td>使用表格標籤製作一份課表</td>
-                    <td><a href="./Lab_01.html">Lab_01.html</a></td>
+                    <td><a href="Lab_01/index.html">Lab_01.html</a></td>
+                </tr>
+                <tr>
+                    <td>Lab 02 - 美化課表</td>
+                    <td>使用Style標籤美化課表</td>
+                    <td><a href="Lab_02/index.html">Lab_02.html</a></td>
+                <tr>
+                    <td>Lab 03 - 彙整Lab資料</td>
+                    <td>建立所有Lab彙整頁面</td>
+                    <td><a href="Lab_03/index.html">Lab_02.html</a></td>
+                </tr>
                 </tr>
             </tbody>
         </table>
