修改網頁內容

--- a/Exercise/index.html
+++ b/Exercise/index.html
@@ -24,7 +24,7 @@
                 <tr>
                     <td>Exercise_01 </td>
                     <td></td>
-                    <td><a href="../Exercise_01/index.html">Exercise_01</a></td>
+                    <td><a href="./Exercise_01/index.html">Exercise_01</a></td>
                 </tr>
                 <tr>
                     <td>Exercise_02</td>
