--- a/lab/index.html
+++ b/lab/index.html
@@ -33,7 +33,7 @@
                 <tr>
                     <td>Lab 03 - 彙整Lab資料</td>
                     <td>建立所有Lab彙整頁面</td>
-                    <td><a href="#">Lab_02.html</a></td>
+                    <td><a href="#"></a></td>
                 </tr>
                 </tr>
             </tbody>
