--- a/lab/index.html
+++ b/lab/index.html
@@ -12,7 +12,7 @@
         <h1>產業新尖兵 Lab 練習</h1>
     </header>
     <main>
-        <table>
+        <table style="border-top:3px #000000 solid;border-bottom:3px #000000 solid;" cellpadding="15" border='0'>
             <thead>
                 <tr>
                     <th>Lab</th>
@@ -28,14 +28,18 @@
                 </tr>
                 <tr>
                     <td>Lab 02 - 美化課表</td>
-                    <td>使用Style標籤美化課表</td>
+                    <td>使用style屬性美化課表</td>
                     <td><a href="Lab_02/index.html">Lab_02.html</a></td>
                 <tr>
                     <td>Lab 03 - 彙整Lab資料</td>
                     <td>建立所有Lab彙整頁面</td>
                     <td><a href="#"></a></td>
                 </tr>
-                </tr>
+                <tr>
+                    <td>Lab 04 - 選擇器</td>
+                    <td>使用適當的選擇器，重新定義樣式</td>
+                    <td><a href="Lab_04/index.html">Lab_04.html</a></td>
+                <tr>
             </tbody>
         </table>
     </main>
