--- a/lab/Lab_02/index.html
+++ b/lab/Lab_02/index.html
@@ -88,7 +88,7 @@
             <td style="background:#A9CCE3  ;">計算機應用</td>
             <td style="background:#A9CCE3  ;">基礎電競遊戲訓練</td>
         </tr>
-
+        <a href="../index.html">回首頁</a>
 </body>
 
 </html>
