修改首頁內容

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <h1>測試專案</h1>
-    <td><a href="lab/index.html" style="font-size: 20px;">Lab</a></td>
+    <a href="lab/index.html" style="font-size: 20px;">Lab</a>
     <p style="font-size: 3rem;font-family: DFkai-sb;">測試專案</p>
     <p style="font-size:20px;font-family: 'Noto Sans TC',serif; sans-serif;">專業網站</p>
     <a href="#anchor">Go to anchor</a>
