--- a/lab/index.html
+++ b/lab/index.html
@@ -40,6 +40,11 @@
                     <td>使用適當的選擇器，重新定義樣式</td>
                     <td><a href="Lab_04/index.html">Lab_04.html</a></td>
                 <tr>
+                    <tr>
+                        <td>Lab 05 - 進一步美化課表</td>
+                        <td>使用學到的各種樣式，進一步美化課表</td>
+                        <td><a href="Lab_05/index.html">Lab_05.html</a></td>
+                    <tr>  
             </tbody>
         </table>
     </main>
