--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@700&display=swap" rel="stylesheet">     
     <title>歡迎來到網站</title>
+    <style>
+          body {
+            background-image: url("https://i.imgur.com/cc95MzO.jpeg");
+            background-repeat:no-repeat
+
+
+          }
+
+    </style>
 </head>
 
 <body>
