--- a/Exercise/index.html
+++ b/Exercise/index.html
@@ -60,6 +60,26 @@
                     <td></td>
                     <td><a href="./Exercise_08/index.html">Exercise_08</a></td>
                 </tr>
+                <tr>
+                    <td>Exercise_09 </td>
+                    <td></td>
+                    <td><a href="./Exercise_09/index.html">Exercise_09/a></td>
+                </tr>
+                <tr>
+                    <td>Exercise_10 </td>
+                    <td></td>
+                    <td><a href="./Exercise_10/index.html">Exercise_10</a></td>
+                </tr>
+                <tr>
+                    <td>Exercise_11 </td>
+                    <td></td>
+                    <td><a href="./Exercise_11/index.html">Exercise_11</a></td>
+                </tr>
+                <tr>
+                    <td>Exercise_12 </td>
+                    <td></td>
+                    <td><a href="./Exercise_12/index.html">Exercise_12</a></td>
+                </tr>
             </tbody>
         </table>
     </main>
